--- a/index.html
+++ b/index.html
@@ -12,48 +12,37 @@
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r146/three.min.js"></script>
     <script>
-        // Scene setup
+        // Create the scene
         const scene = new THREE.Scene();
 
-        // Camera setup
+        // Create the camera
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        camera.position.z = 5;
 
-        // Renderer setup
+        // Create the renderer
         const renderer = new THREE.WebGLRenderer();
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
-        
+
         // Create a cube
         const geometry = new THREE.BoxGeometry();
-        const material = new THREE.MeshBasicMaterial({ color: 0x0077ff, wireframe: true });
+        const material = new THREE.MeshBasicMaterial({ color: 0x0077ff });
         const cube = new THREE.Mesh(geometry, material);
         scene.add(cube);
 
-        // Position the camera
-        camera.position.z = 5;
-        
         // Animation loop
         function animate() {
             requestAnimationFrame(animate);
 
-            // Add cube rotation
+            // Rotate the cube
             cube.rotation.x += 0.01;
             cube.rotation.y += 0.01;
 
-            // Render the scene with the camera
+            // Render the scene
             renderer.render(scene, camera);
         }
 
-        // Add basic interaction to zoom the camera in and out
-        document.addEventListener('keydown', function(event) {
-            if (event.key === 'ArrowUp') {
-                camera.position.z -= 0.5;
-            } else if (event.key === 'ArrowDown') {
-                camera.position.z += 0.5;
-            }
-        });
-
-        // Responsive canvas resizing
+        // Handle window resize
         window.addEventListener('resize', () => {
             renderer.setSize(window.innerWidth, window.innerHeight);
             camera.aspect = window.innerWidth / window.innerHeight;
