--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r146/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
     <script>
         // Create the scene
         const scene = new THREE.Scene();
@@ -43,7 +43,4 @@
         }
 
         // Start the animation
-        animate();
-    </script>
-</body>
-</html>
+        anim
