--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
         const cube = new THREE.Mesh(geometry, material);
         scene.add(cube);
 
+        // Replace the cube with a sphere (temporary avatar)
+        const geometry = new THREE.SphereGeometry(1, 32, 32);  // Sphere instead of cube
+        const material = new THREE.MeshStandardMaterial({ color: 0x0077ff });
+        const avatar = new THREE.Mesh(geometry, material);
+        scene.add(avatar);
+
+
+        
         // Add lighting
         const ambientLight = new THREE.AmbientLight(0x404040); // Ambient light
         scene.add(ambientLight);
