--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         document.body.appendChild(renderer.domElement);
 
         // Create a cube
-        #const geometry = new THREE.BoxGeometry();
-        #const material = new THREE.MeshBasicMaterial({ color: 0x0077ff });
-        #const cube = new THREE.Mesh(geometry, material);
-        #scene.add(cube);
+        // const geometry = new THREE.BoxGeometry();
+        // const material = new THREE.MeshBasicMaterial({ color: 0x0077ff });
+        // const cube = new THREE.Mesh(geometry, material);
+        // scene.add(cube);
 
         // Replace the cube with a sphere (temporary avatar)
         const geometry = new THREE.SphereGeometry(1, 32, 32);  // Sphere instead of cube
