--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
             
             if (rotating) {
-                cube.rotation.x += 0.01;
-                cube.rotation.y += 0.01;
+                avatar.rotation.x += 0.01;
+                avatar.rotation.y += 0.01;
             }
 
             // Render the scene
