--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         controls.update(); // Required if controls.enableDamping = true, or if controls.autoRotate = true
 
         // Animation loop
-        let rotating = true;
+        let rotating = false;
         function animate() {
             requestAnimationFrame(animate);
 
